--- a/views/delete.html
+++ b/views/delete.html
@@ -1,12 +1,13 @@
 <html>
     <body>
         <a href="/">Home</a>
-{{#if result.deleted}}
-    <h2>{{title}} deleted</h2>
-    remaining total: {{result.total}}
-{{else}}
-    <h2>{{title}} not found</h2>
-{{/if}}
+        {{#if delMush.deleted}}
+         <h2>{{name}} has been deleted</h2>
+        <p>remaining total: {{result.total}}</p>
+        {{else}}
+        <h2>{{name}} has not been deleted</h2>
+        {{/if}}
 
     </body>
 </html>
+
