--- a/views/details.html
+++ b/views/details.html
@@ -1,12 +1,17 @@
 <html>
 <body>
-  <h2>Details for {{name}}</h2>
+  <h2>Details for mushroom name: {{name}}</h2>
   {{#if result}}
     <li>Name: {{ result.name }}
     <li>Size: {{ result.size }}
     <li>Location: {{ result.location }}
+    <p>
+      <a href="/delete?name={{result.name}}">Delete</a>
+    </p>
   {{else}}
     not found
   {{/if}}
+    <br/>    
+   <a href="/">Home</a>  
 </body>
 </html> 
