--- a/views/delete.html
+++ b/views/delete.html
@@ -1,11 +1,12 @@
 <html>
     <body>
         <a href="/">Home</a>
-        {{#if delMush.deleted}}
+        {{#if result}}
          <h2>{{name}} has been deleted</h2>
         <p>remaining total: {{result.total}}</p>
         {{else}}
-        <h2>{{name}} has not been deleted</h2>
+        <h2>{{name}} has been deleted</h2>
+        <p>remaining total: {{result.total}}</p>
         {{/if}}
 
     </body>
