fix Delete function

--- a/views/delete.html
+++ b/views/delete.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <body>
         <a href="/">Home</a>
@@ -5,7 +6,7 @@
          <h2>{{name}} has been deleted</h2>
         <p>remaining total: {{result.total}}</p>
         {{else}}
-        <h2>{{name}} has been deleted</h2>
+        <h2>{{name}} has not been deleted</h2>
         <p>remaining total: {{result.total}}</p>
         {{/if}}
 
