--- a/views/details.html
+++ b/views/details.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-  <h2>Details for mushroom name: {{name}}</h2>
+  <h2>Details for mushroom name: {{result.name}}</h2>
   {{#if result}}
     <li>Name: {{ result.name }}
     <li>Size: {{ result.size }}
