--- a/views/details.html
+++ b/views/details.html
@@ -6,7 +6,7 @@
     <li>Size: {{ result.size }}
     <li>Location: {{ result.location }}
     <p>
-      <a href="/delete?name={{name}}">Delete</a>
+      <a href="/delete?name={{result.name}}">Delete</a>
     </p>
   {{else}}
     not found
