Assigment 5 final version

--- a/views/delete.html
+++ b/views/delete.html
@@ -2,9 +2,9 @@
 <html>
     <body>
         <a href="/">Home</a>
+       <h2>Mushroom name: </h2> 
         {{#if result}}
          <h2>{{result.name}} has been deleted</h2>
-        
         {{else}}
         <h2>{{result.name}} has not been deleted</h2>
         <p>remaining total: {{result.total}}</p>
