--- a/views/home.html
+++ b/views/home.html
@@ -1,46 +1,167 @@
 <!DOCTYPE html>
 <html>
-<body>
-
-<h2>Witaj in Advanced JavaScript class presenting mushrooms finder!</h2>
-
-
-<form method="POST" action="/search">
-<!-- if you want another value you could add: 
-<input type=hidden name="hush" val="hidden, but not secret!">-->
-        <div>
-            <label for="mashName">Find following mushroom:</label>
-            <input type="text" id="mashName" name="name">
-        </div>
-        <div>
-            <button type="submit">Submit</button>
-        </div>
-</form> 
-    <form method="POST" action="/add">
-        <div>
-            <label for="newMush">Add new mushroom:</label>
-            <input type="text" id="newMush" name="name">
-            <label for="newMush"> size:</label>
-            <input type="text" id="newMushs" name="size">
-            <label for="newMush">location:</label>
-            <input type="text" id="newMush" name="location">
-        </div>
-        <div>
-            <button type="submit">Submit</button>
-        </div>
-</form>     
+    <head>
+        <title>React Project</title>
+        <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+        <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+        <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+        <style>
+        .mushItem:hover {
+             background-color: #ad6e4c;
+        }
+        .hidden {
+            display:none;
+        }
+        .show{
+            display:block;
+        }
+        div {
+            text-align: center; 
+            font-size: 1.35rem;
+            color: darkgreen;
+           
+            
+        }
+        .left li, .right li{
+            text-align: left;
+            line-height: 35px;
+           
+        }
+        .right {
+            position: relative;
+           
+        }
+        .right ul {
+            position: absolute;
+            color:darkgreen;
+            
+        }
+        .grid-container {
+            display: grid;
+            grid-template-columns: 45% 45%; 
+            grid-gap: 20px;
+            margin: 20px auto 20px 20px
+        
+            
+        }
+        .grid-item {
+            border: 2px solid #1f5aba;
+            text-align: center;
+            padding: 20px;
+            background-color: #f7d9a5;
+        
+        }
+        
+        form, .searchForm{
+            clear: both;
+            } </style>
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="text/babel"> //NOTE: text/babel type required to support JSX 
+      
+    class MushApp extends React.Component { 
+        constructor(props){
+                 super(props);//be sure to instantiate parent class
+                    //set initial state using data from serverapplication 
+                this.state = {
+                    items: {{{mushrooms}}},
+                    selectedItem: '', //search term
+                    showHide: 'hidden' 
+                    };
+                this.showDetail = this.showDetail.bind(this);
+        }
+        componentDidMount() {   
+            // code to execute when component first rendered to DOM
+        } 
+        componentWillUnmount() {
+            // code to execute when component is removed from DOM
+        }
+        showDetail(e) {
+            let onClickItem = this.state.items.find((item) => {
+                return item._id == e.target.id;
+            });
+            this.setState({selectedItem: onClickItem});
+            console.log(this.state.selectedItem);
+        }
+        render() {
+            return (
+                <div>
+                    <h1>Welcome to The NorthWest Mushroom Finder!</h1>
+                    <SearchForm/>
+                    
+                    <div className="grid-container">
+                        <div className="grid-item">
+                            <MushList 
+                                items={this.state.items} 
+                                showDetail={this.showDetail}
+                            />
+                        </div>
+                        
+                        <div className="grid-item">
+                            <MushDetail
+                                item={this.state.selectedItem}
+                            />
+                        </div>
+                    </div>
+                </div>
+            );
+        }
+}
+    const SearchForm = () => {
+        return (
+            <div className="searchForm">
+                <input type="text" placeholder="Search a Mushroom"
+                    //value={this.props.filterText}
+                    //onChange={this.handleFilterTextChange}
+                />
+            </div>
+        );
+    }
     
-<ul>
-    {{#if wantDisplay}}
-        <p>Current list of mushrooms:</p>
-        {{#each mushrooms}}
-            <li><a href="/get?name={{name}}">{{name}}</a></li>
-        {{/each}}
-    {{/if}}
+    const MushList = ({className, items, showDetail}) => {
+        return (
+        <div className="left">
+               <h3><u>Current list of mushrooms:</u></h3> 
+                <ul>
+                {items.map( (item, i) => (
+                    <div key={item._id}>
+                        <li id={item._id} 
+                            onClick={showDetail}
+                            className="MushItem">
+                            {item.name}
+                        </li>
+                    </div> 
+                    ))}
+                           
+                </ul>
+         </div>
+    );
+    }
+    const MushDetail = ({item}) => {
+        return (
+            <div className="right">
+            <h3><u>Mushroom Details:</u></h3> 
+                <div>
+                   <ul>
+                    <li>Name: {item.name}</li>
+                    <li>Size: {item.size}</li>
+                    <li>Location: {item.location}</li>
+                 
+                    </ul>
+            
+                </div>
+            </div>
+        );
+    }
+    
+        
+        
 
-</ul>
-
-
-</body>
+ReactDOM.render(
+        <MushApp />,
+        document.getElementById("root")
+    );   
+        </script>
+    </body>
 </html>
-
